<resources>
    <string name="app_name" translatable="false">OpusAI Mobility</string>
    <string name="google_map_route_key" translatable="false">google_map_route_key</string>
       <string name="google_web_client_id" translatable="false">google_web_client_id_from_developer_console_here</string>
       <string name="facebook_app_id" translatable="false">facebook_app_id</string>
       <string name="fb_login_protocol_scheme" translatable="false">fb(facebook_app_id)</string>
      <string name="facebook_client_token" translatable="false">facebook_client_token</string>
    <string name="tap_again" translatable="false">Tap Again To Exit</string>
    <string name="show"><u>Show</u></string>
    <string name="show_wo">Show</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="we_ll_call_or_text_to_confirm">We\'ll call or text to confirm your number, Standard message and data rates apply.</string>
    <string name="enter_the_email_address">Enter the email address associated with your account and we will email you a link to reset your password</string>
    <string name="make_sure_it_matches">Make sure it matches the name on your government ID.</string>
    <string name="to_sign_up_you_need">To sign up you need to be at least 18. Your birthday won\'t be shared with other people who use OpusAIMobility</string>
    <string name="we_ll_email_you_trip_confirmation_and_receipts">We\'ll email you trip confirmation and receipts.</string>
    <string name="by_selecting_agree_and_continue_below">By selecting Agree and continue below, I agree to OpusAIMobility\'s Terms of Service, Payments Terms of Service, Privacy Policy, and Nondiscrimination Policy.</string>
    <string name="go_grab_will_send_you">OpusAIMobility will send you members-only deals, inspiration, marketing emails, and push notifications. You can opt out of receiving these at any time in your account settings or directly from the marketing notification.</string>
    <string name="i_dont_want_to_receive_message">I don\'t want to receive messages from OpusAIMobility</string>
    <string name="alert">Alert !!!</string>
    <string name="new_cant_empty">Password can\'t empty !</string>
    <string name="confirm_cant_empty">Confirm can\'t empty !</string>
    <string name="password_must_match">Confirm password must be match</string>
    <string name="scheduled">SCHEDULED</string>
    <string name="history">HISTORY</string>
    <string name="history_one">History</string>
    <string name="report_your_lost_items">Report your lost item by tapping on \'Call US\' or \'Email US\' below. Please make sure to give as much information as possible, and our team willreach out to you soon.\n\nNote that OpusAIMobility is not responsible for items left in a car after a ride. We\'ll try to help you, but we are unable to guarantee that a Captain has your item or can immediately deliver it to you.</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="account">Account</string>
    <string name="opusaimobility">OpusAIMobility</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="food">Food</string>
    <string name="delivery">Delivery</string>
    <string name="order_food">ORDER FOOD</string>
    <string name="order_food_with_opusaimobility">Order food with OpusAIMobility</string>
    <string name="use_promo_opusaimobility200_and_get_r_200_off_on_norders_worth_rs_800_or_above">Use promo OPUSAIMOBILITY200 and get Rs. 200 off on\norders worth Rs. 800 or above</string>
    <string name="oder_now">Oder now</string>
    <string name="book_a_ride">BOOK A RIDE</string>
    <string name="current_location">Your current location</string>
    <string name="where_do_you_want_to_go">Where do you want to go ?</string>
    <string name="select_dropoff">Select dropoff</string>
    <string name="stay_safe">STAY SAFE</string>
    <string name="get_vaccinated">Get vaccinated</string>
    <string name="choose_the_vaccination_cente">Choose the vaccination center\nyou prefer and let us get you\nthere safely</string>
    <string name="set_up_a_payment_method">Set up a payment method</string>
    <string name="use_your_payment_methods_to_make_npurchase_on_opusaimobility">Use your payment methods to make\npurchase on OpusAIMobility.Learn more</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="deleted_message">This message was deleted</string>
    <string name="pay_with">Pay with</string>
    <string name="paypal">Paypal</string>
    <string name="credit_or_debit_card">Credit or debit card</string>
    <string name="add_card_details">Add card details</string>
    <string name="card_number">Card number</string>
    <string name="expiration">Expiration</string>
    <string name="yy_mm">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="zip_code">Zip Code</string>
    <string name="_38000">38000</string>
    <string name="_123">123</string>
    <string name="_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="next">Next</string>
    <string name="john_doe">John Doe</string>
    <string name="personal_information">Personal Information</string>
    <string name="payments_and_payouts">Payments and payouts</string>
    <string name="office_location">Office location</string>
    <string name="venesse_road_nyc_newyork">Venesse road- NYC- NewYork</string>
    <string name="grand_central_terminal">Grand central terminal</string>
    <string name="_27_west_4th_street_new_york_ny_10012">27 west 4th street,New york,NY 10012</string>
    <string name="booking_details">Booking Details</string>
    <string name="go_mini">Go Mini</string>
    <string name="get_support">Get support</string>
    <string name="manage_ride">Manage Ride</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="cancel">Cancel</string>
    <string name="you_sure_you_want_to_cancel">You sure you want to cancel?</string>
    <string name="we_ll_find_your_captain_as_soon_as_possible">we\'ll find your captain as soon as possible.</string>
    <string name="find_your_captain">Finding your Captain</string>
    <string name="don_t_cancel">Don\'t cancel</string>
    <string name="current_location_">Current Location</string>
    <string name="where_to">Where to ?</string>
    <string name="rewards_1_208_points">Rewards: 1,208 points</string>
    <string name="your_rides">Your rides</string>
    <string name="setting">Setting</string>
    <string name="become_a_captain">Become a Captain</string>
    <string name="tell_us_why_you_want_to_cancel">Tell us why you want to cancel</string>
    <string name="i_don_t_need_a_ride_anymore">I don\'t need a ride anymore</string>
    <string name="i_want_to_change_my_booking_details">I want to change my booking details</string>
    <string name="it_took_too_long_to_find_a_captain">It took too long to find a captain</string>
    <string name="other">Other</string>
    <string name="submit">Submit</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="no">No</string>
    <string name="add_reason">Add Reason</string>
    <string name="your_captain_is_on_the_way">Your Captain is on the way</string>
    <string name="wear_a_mask_during_your_ride">Wear a mask during your ride</string>
    <string name="learn_more">Learn more</string>
    <string name="white_suzuki_wagonar">White Suzuki Wagonar</string>
    <string name="le_5467">LE-5467</string>
    <string name="daily_covid_19_safety_checklist_completed">Daily COVID-19 safety checklist completed.</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="trip_details">Trip Details</string>
    <string name="safety">Safety</string>
    <string name="share_details">Share details</string>
    <string name="device" translatable="false">android</string>
    <string name="ride">Ride</string>
    <string name="rent">Rent</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="where">Where to?</string>
    <string name="terminal_arjosri">Terminal arjosri</string>
    <string name="schedule_a_ride_for">Schedule a ride for</string>
    <string name="schedule_a_delivery_for">Schedule a delivery for</string>
    <string name="today_5_15_pm">Today,5:15 PM</string>
    <string name="the_date_you_choose_is_fully_booked_pick_another_date">The date you choose is fully booked.pick another date!</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_order">Schedule Order</string>
    <string name="add_pick_up_notes_for_driver">Add pick-up Notes for Driver</string>
    <string name="confirm_pick_up">Confirm pick-up</string>
    <string name="suggested_rides">Suggested Rides</string>
    <string name="view_all">View All</string>
    <string name="cash">Cash</string>
    <string name="grabcar_protect">GrabCar Protect</string>
    <string name="_415_000">$415.000</string>
    <string name="special_fleet_extra_protection">Special Fleet,extra protection</string>
    <string name="plus">Plus</string>
    <string name="economy">Economy</string>
    <string name="book_grabcar_protect">Book Grabcar protect</string>
    <string name="yesterday_2_39_pm">Yesterday,2:39 PM</string>
    <string name="ride_fare">Ride fare</string>
    <string name="_400"><font fgcolor="#B3B0B0">$</font>400</string>
    <string name="trip_fare">Trip fare</string>
    <string name="_237_70">237.70</string>
    <string name="initial_waiting">Initial waiting</string>
    <string name="_45_60">45.60</string>
    <string name="_283_80">283.80</string>
    <string name="amount_charged">Amount charged</string>
    <string name="_214">$214</string>
    <string name="cash_paid">Cash paid</string>
    <string name="opusaimobility_paid">OpusAIMobility Pay</string>
    <string name="_300">$400</string>
    <string name="_5_have_been_credited_to_your_wallet">have been credited to your Wallet</string>
    <string name="thursday_02_39_pm">Thursday, 02:39 PM</string>
    <string name="how_was_your_experience_with_john">How was your experience with</string>
    <string name="you_ve_earned_103_points">You\'ve earned</string>
    <string name="points"> points!</string>
    <string name="more_points_mean">More points mean more rewards.Use your\npoints to donate,or get discounts.</string>
    <string name="total_ride_fare">Total ride fare</string>
    <string name="_295">$295</string>
    <string name="_5">$5</string>
    <string name="credited_back_to_wallet">Credited back to Wallet</string>
    <string name="done">Done</string>
    <string name="gender">Gender</string>
    <string name="close">Close</string>
    <string name="please_try_again">Please try again</string>
    <string name="we_re_having_trouble_connecting_but_connect_to_wi_fi_or_mobile_network">We\'re having trouble connecting, but Connect to Wi-Fi or mobile network</string>
    <string name="sorry_for_the_delay">Sorry for the delay</string>
    <string name="thank_you">Thank You!</string>
    <string name="your_review_is_awaiting_moderation_and_nwill_appear_soon">Your review is awaiting moderation and\nwill appear soon.</string>
    <string name="save_this_recipe">Back to home</string>
    <string name="review_capital">Review</string>
    <string name="what_did_you_think_of_this_recipe">What did you think of this resturant?</string>
    <string name="type_your_comment">Type your comment...</string>
    <string name="select_another_resturant">Please select another resturant</string>
    <string name="select_another_resturant_warning">This store closed while you were browsing what they offer or is not available right now.</string>
    <string name="find_another_restaurant">Find another restaurant</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>