<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:text="@string/review_capital"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/toolbarTextSize" />

            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAlignment="viewEnd"
                android:textColor="@color/blue"
                tools:ignore="RtlCompat" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_36sdp"
            android:text="@string/what_did_you_think_of_this_recipe"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp">

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:numStars="5"
                android:theme="@style/ratingBarYellow" />

        </RelativeLayout>


        <EditText
            android:id="@+id/et_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/type_your_comment"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="@dimen/_105sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_110sdp"
            android:background="@drawable/un_selected_btn_grey"
            android:clickable="false"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

</FrameLayout>