<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_100sdp"
            android:text="@string/thank_you"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center_horizontal"
            android:text="@string/your_review_is_awaiting_moderation_and_nwill_appear_soon"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/back_to_home_btn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_9sdp"
            android:background="@drawable/app_color_bg_btn"
            android:gravity="center"
            android:text="@string/save_this_recipe"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_54sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/thankyou_img" />


    </LinearLayout>

</FrameLayout>